amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/introspection-directive.api.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/introspection-directive.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#DomainElement-name-invalidIntrospectionName
  Message: Name must not begin with '__' as this is used exclusively by GraphQL’s introspection system
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/introspection-directive.api.graphql#/declares/__invalidName
  Property: http://a.ml/vocabularies/core#name
  Range: [(9,11)-(9,24)]
  Location: 
